--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,8 @@
 <div class='events-header' style='background-image: url(<%= header_background_image_url %>)'>
   <div class="container">
     <h2> Discover upcoming events </h2>
-    <form>
-      <input type="text" class="form-control" name="search" placeholder="Search for events, shows, courses...">
+    <form action="<%= root_path %>" method="get">
+      <input type="text" class="form-control" name="search" placeholder="Search for events, shows, courses..." value="<%= @search %>">
     </form>
   </div>
 </div>
