--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -3,13 +3,13 @@
   <ul class="nav navbar-nav">
     <% if current_user %>
         <li class="nav-item">
-          <%= link_to "Your Events", "#", class: "nav-link" %>
+          <%= link_to "Your Events", yourevents_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Create Event", new_event_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Create Venue", '#', class: "nav-link" %>
+          <%= link_to "Create Venue", new_venue_path, class: "nav-link" %>
         </li>
     <% else %>
         <li class="nav-item">
